--- a/ShelfSpace_Project/ShelfSpace_Project/static/CSS/styles.css
+++ b/ShelfSpace_Project/ShelfSpace_Project/static/CSS/styles.css
@@ -1,8 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-size: 0.875rem;
-    font-family: var(--font-family-primary);
-    color: var(--body-fg);
-    background: var(--body-bg);
+h1{
+    background-color: brown;
 }
