--- a/ShelfSpace_Project/ShelfSpace_Project/templates/base.html
+++ b/ShelfSpace_Project/ShelfSpace_Project/templates/base.html
@@ -9,7 +9,7 @@
      
     <title>Shelfspace</title>
 
-    <style>
+    <!-- <style>
       body {
           font-family: 'Arial', sans-serif;
           background-color: #f4f4f4;
@@ -68,10 +68,9 @@
   .credit-item {
       margin-bottom: 10px;
   }
-</style>
+</style> -->
 
-    <link rel="stylesheet" href="{% static 'CSS/style.css' %}">
-    <link rel="stylesheet" href="{% static 'CSS/login.css' %}">
+    <link rel="stylesheet" href="{% static 'CSS/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
