--- a/ShelfSpace_Project/ShelfSpace_Project/templates/base.html
+++ b/ShelfSpace_Project/ShelfSpace_Project/templates/base.html
@@ -81,9 +81,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">      
           <a class="navbar-brand" href="{% url 'home' %}">
-      
-            Shelfspace
+            RMLD File Server
           </a>
+          <br>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -91,13 +91,14 @@
             <div class='navbar-nav ms-auto px-2'>
               {% if user.is_authenticated %}
               <a class='nav-item nav-link'>User: {{user.username}}</a>
+              <a class='nav-item nav-link active' href="{% url 'books:file_list' %}">View</a>
+              <a class='nav-item nav-link active' href="{% url 'books:upload_file' %}">Upload</a>
               <a class='nav-item nav-link' href="JavaScript:{document.getElementById('logout').submit()}">Logout</a>
               <form id='logout' method='POST' action="{% url 'logout' %}">
                 {% csrf_token %}
                 <input type='hidden' />
               </form>
               {% else %}
-              <a class='nav-item nav-link' href="{% url 'signup' %}">Sign up</a>
               <a class='nav-item nav-link' href="{% url 'login' %}">Log in</a>
               {% endif %}
             </div>
