Minor Bux Fixes

--- a/ShelfSpace_Project/accounts/templates/accounts/signup.html
+++ b/ShelfSpace_Project/accounts/templates/accounts/signup.html
@@ -18,7 +18,7 @@
     {% endif %}
 
     <br>
-    <h3 class='text-center'>Sign up to Timer Website</h1>
+    <h3 class='text-center'>Sign up to ShelfSpace</h1>
 <br>
     <div class="containers">
 
