--- a/ShelfSpace_Project/ShelfSpace_Project/templates/base.html
+++ b/ShelfSpace_Project/ShelfSpace_Project/templates/base.html
@@ -9,67 +9,6 @@
      
     <title>Shelfspace</title>
 
-    <!-- <style>
-      body {
-          font-family: 'Arial', sans-serif;
-          background-color: #f4f4f4;
-          margin: 0;
-          padding: 0;
-          text-align: center;
-      }
-
-      .containering {
-          display: flex;
-          justify-content: center;
-          height: 100vh;
-      }
-
-      .error-message {
-          color: #333;
-          font-size: 2em;
-      }
-
-      .image-container {
-          margin-top: 30px;
-      }
-  </style>
-
-<style>
-  table {
-      border-collapse: collapse;
-      width: 100%;
-  }
-
-  th, td {
-      padding: 10px;  /* Adjust the padding as needed */
-      text-align: left;
-  }
-
-  th {
-      background-color: #f2f2f2;  /* Optional: Add a background color to header cells */
-  }
-</style>
-
-<style>
-  body {
-      font-family: 'Arial', sans-serif;
-      margin: 20px;
-  }
-  h1 {
-      color: #333;
-  }
-  h2 {
-      color: #555;
-  }
-  .credits-list {
-      list-style: none;
-      padding: 0;
-  }
-  .credit-item {
-      margin-bottom: 10px;
-  }
-</style> -->
-
     <link rel="stylesheet" href="{% static 'CSS/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -81,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">      
           <a class="navbar-brand" href="{% url 'home' %}">
-            RMLD File Server
+            Shelfspace
           </a>
           <br>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,6 +38,7 @@
                 <input type='hidden' />
               </form>
               {% else %}
+              <a class='nav-item nav-link' href="{% url 'signup' %}">Sign Up</a>
               <a class='nav-item nav-link' href="{% url 'login' %}">Log in</a>
               {% endif %}
             </div>
