--- a/ShelfSpace_Project/accounts/templates/accounts/login.html
+++ b/ShelfSpace_Project/accounts/templates/accounts/login.html
@@ -12,7 +12,7 @@
       {{ error }}
     </div>
     {% endif %}
-    <h3 class="text-center">Log in to Timer Website</h3>
+    <h3 class="text-center">Log in to ShelfSpace</h3>
     <br>
     <div class="containers">
       <div class="box" align="center">
