Made the Library Centralized

--- a/ShelfSpace_Project/books/templates/books/file_list.html
+++ b/ShelfSpace_Project/books/templates/books/file_list.html
@@ -30,7 +30,7 @@
     </div>
     {% endif %}
 
-    <h1>Your Files and Documents</h1>
+    <h1>Books Available to Read!</h1>
     <div class='container'>
       
     </div>
