--- a/ShelfSpace_Project/ShelfSpace_Project/templates/base.html
+++ b/ShelfSpace_Project/ShelfSpace_Project/templates/base.html
@@ -30,8 +30,8 @@
             <div class='navbar-nav ms-auto px-2'>
               {% if user.is_authenticated %}
               <a class='nav-item nav-link'>User: {{user.username}}</a>
-              <a class='nav-item nav-link active' href="{% url 'books:file_list' %}">View</a>
-              <a class='nav-item nav-link active' href="{% url 'books:upload_file' %}">Upload</a>
+              <a class='nav-item nav-link active' href="{% url 'books:file_list' %}">View Books</a>
+              <a class='nav-item nav-link active' href="{% url 'books:upload_file' %}">Upload Books</a>
               <a class='nav-item nav-link' href="JavaScript:{document.getElementById('logout').submit()}">Logout</a>
               <form id='logout' method='POST' action="{% url 'logout' %}">
                 {% csrf_token %}
