--- a/ShelfSpace_Project/books/templates/books/upload_file.html
+++ b/ShelfSpace_Project/books/templates/books/upload_file.html
@@ -34,6 +34,11 @@
                   {{ form.genre }}
                 </div>
 
+                <div class="mb-3">
+                  <label for="id_rating" class="form-label">Rate:</label>
+                  {{ form.rating }}
+                </div>
+
                 <button type="submit" class="btn btn-success">Upload</button>
               </div>
             </form>
