--- a/ShelfSpace_Project/ShelfSpaceBlogs/templates/ShelfSpaceBlogs/create_post.html
+++ b/ShelfSpace_Project/ShelfSpaceBlogs/templates/ShelfSpaceBlogs/create_post.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Post</title>
-</head>
+{% extends 'base.html' %}
+{% block content %}
+{% load static %}
 <body>
+    <div class='container'>
     <h1>Create a New Post</h1>
     <form method="POST">
         {% csrf_token %}
@@ -15,5 +12,7 @@
         <textarea id="content" name="content"></textarea><br>
         <input type="submit" value="Create Post">
     </form>
+    </div>
 </body>
 </html>
+{% endblock %}
