--- a/ShelfSpace_Project/accounts/templates/accounts/homepage.html
+++ b/ShelfSpace_Project/accounts/templates/accounts/homepage.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<h1>Welcome to shelfspace</h1>
-
+<br>
+<div class='container' align='center'>
+    <h1>Welcome to ShelfSpace</h1>
+</div>
 {% endblock %}
