--- a/ShelfSpace_Project/accounts/templates/accounts/homepage.html
+++ b/ShelfSpace_Project/accounts/templates/accounts/homepage.html
@@ -1,8 +1,36 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<br>
-<div class='container' align='center'>
-    <h1>Welcome to ShelfSpace</h1>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="jumbotron mt-4">
+                <h1 class="display-4 text-center">Welcome to ShelfSpace</h1>
+                <p class="lead text-center">Discover a dynamic and interactive platform for book enthusiasts to share, donate, and engage in meaningful discussions.</p>
+                <hr class="my-4">
+                <h3 class="text-center">Features:</h3>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Upload and read books</li>
+                    <li class="list-group-item">Rate the books</li>
+                    <li class="list-group-item">Ask your Doubts to ShelfSpace AI</li>
+                    <li class="list-group-item">Explore books by genre</li>
+                    <li class="list-group-item">Get Book Recommendation from ShelfSpace AI</li>
+                    <li class="list-group-item">Community Section for Sharing Quotes and Highlights</li>
+                </ul>
+         
+                    <br>
+                    <br>
+                
+            </div>
+            <div class='container'>
+                <div class="col-md-6">
+                    <h2>Our Mission</h2>
+                    <p>At ShelfSpace, our mission is to make reading a delightful and engaging experience for everyone. We believe in fostering a community where readers can connect, learn, and grow together.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+
 {% endblock %}
