--- a/ShelfSpace_Project/ShelfSpaceBlogs/templates/ShelfSpaceBlogs/create_post.html
+++ b/ShelfSpace_Project/ShelfSpaceBlogs/templates/ShelfSpaceBlogs/create_post.html
@@ -1,18 +1,28 @@
 {% extends 'base.html' %}
+
 {% block content %}
-{% load static %}
-<body>
-    <div class='container'>
-    <h1>Create a New Post</h1>
-    <form method="POST">
-        {% csrf_token %}
-        <label for="title">Title:</label><br>
-        <input type="text" id="title" name="title"><br>
-        <label for="content">Content:</label><br>
-        <textarea id="content" name="content"></textarea><br>
-        <input type="submit" value="Create Post">
-    </form>
+    {% load static %}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <h1 class="text-center mb-4">Create a New Post</h1>
+                <div class="card rounded-3 shadow-sm">
+                    <div class="card-body">
+                        <form method="POST">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <label for="title" class="form-label">Title:</label>
+                                <input type="text" id="title" class="form-control" name="title">
+                            </div>
+                            <div class="mb-3">
+                                <label for="content" class="form-label">Content:</label>
+                                <textarea id="content" class="form-control" name="content"></textarea>
+                            </div>
+                            <button class="btn btn-primary" type="submit">Create</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</body>
-</html>
 {% endblock %}
