--- a/ShelfSpace_Project/ShelfSpace_Project/templates/base.html
+++ b/ShelfSpace_Project/ShelfSpace_Project/templates/base.html
@@ -11,13 +11,32 @@
 
     <!-- <link rel="stylesheet" href="{% static 'CSS/styles.css' %}"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+    <style>
+        .navbar-dark .navbar-nav .nav-link {
+            color: rgba(255, 255, 255, 0.9); /* Lighten text color */
+            font-weight: bold; /* Increase font weight */
+            padding: 0.5rem 1rem; /* Increase padding */
+        }
 
+        .navbar-dark .navbar-brand {
+            color: rgba(255, 255, 255, 0.9); /* Ensure the brand name is also visible */
+            font-weight: bold;
+        }
+
+        .navbar-dark .navbar-nav .nav-link:hover {
+            color: #f8f9fa; /* Change color on hover for better visibility */
+        }
+
+        .navbar-dark {
+            background-color: #343a40; /* Ensure background color is sufficiently dark */
+        }
+    </style>
+</head>
 <body>
 
   <div class="container">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">      
           <a class="navbar-brand" href="{% url 'home' %}">
             Shelfspace
@@ -27,22 +46,22 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <div class='navbar-nav ms-auto px-2'>
+            <div class="navbar-nav ms-auto px-2">
               {% if user.is_authenticated %}
-              <a class='nav-item nav-link'>User: {{user.username}}</a>
-              <a class='nav-item nav-link active' href="{% url 'ShelfSpaceBlogs:post_list' %}">Quotes Sharing</a>
-              <a class='nav-item nav-link active' href="{% url 'ShelfSpaceBlogs:create_post' %}">Create Post</a>
-              <a class='nav-item nav-link active' href="{% url 'books:recommend' %}">Recommend a Book</a>
-              <a class='nav-item nav-link active' href="{% url 'books:file_list' %}">View Books</a>
-              <a class='nav-item nav-link active' href="{% url 'books:upload_file' %}">Upload Books</a>
-              <a class='nav-item nav-link' href="JavaScript:{document.getElementById('logout').submit()}">Logout</a>
-              <form id='logout' method='POST' action="{% url 'logout' %}">
+              <a class="nav-item nav-link">User: {{user.username}}</a>
+              <a class="nav-item nav-link active" href="{% url 'ShelfSpaceBlogs:post_list' %}">Quotes Sharing</a>
+              <a class="nav-item nav-link active" href="{% url 'ShelfSpaceBlogs:create_post' %}">Create Post</a>
+              <a class="nav-item nav-link active" href="{% url 'books:recommend' %}">Recommend a Book</a>
+              <a class="nav-item nav-link active" href="{% url 'books:file_list' %}">View Books</a>
+              <a class="nav-item nav-link active" href="{% url 'books:upload_file' %}">Upload Books</a>
+              <a class="nav-item nav-link" href="JavaScript:{document.getElementById('logout').submit()}">Logout</a>
+              <form id="logout" method="POST" action="{% url 'logout' %}">
                 {% csrf_token %}
-                <input type='hidden' />
+                <input type="hidden" />
               </form>
               {% else %}
-              <a class='nav-item nav-link' href="{% url 'signup' %}">Sign Up</a>
-              <a class='nav-item nav-link' href="{% url 'login' %}">Log in</a>
+              <a class="nav-item nav-link" href="{% url 'signup' %}">Sign Up</a>
+              <a class="nav-item nav-link" href="{% url 'login' %}">Log in</a>
               {% endif %}
             </div>
           </div>
@@ -57,6 +76,6 @@
   {% endblock %}
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
