--- a/ShelfSpace_Project/ShelfSpaceBlogs/templates/ShelfSpaceBlogs/create_post.html
+++ b/ShelfSpace_Project/ShelfSpaceBlogs/templates/ShelfSpaceBlogs/create_post.html
@@ -81,8 +81,8 @@
 
         /* Button Styling */
         .btn-primary {
-            background-color: #007bff;
-            border-color: #007bff;
+            background-color: #03dac6;
+            border-color: #03dac6;
             padding: 10px 20px;
             font-size: 1rem;
             font-weight: 600;
